# wohnungsscraper

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  UV_GUIDE.md  pyproject.toml  set_secrets.sh
.github/: PRECOMMIT.md
.github/workflows/: scrape.yml  test.yml
data/: arwag.json  athome.json  bwsg.json  ebg.json  egw.json  familienwohnbau.json  frieden.json  migra.json  mischek.json  nhg.json  nordwestbahnhof.json  oesw.json  oevw.json  sozialbau.json  wohnberatung-wien.json
docs/: adding-sites.md  multi-account-email.md
sites/: ebay-kleinanzeigen.yaml.example  ebg.yaml  immoscout24.yaml.example  immowelt.yaml.example  nordwestbahnhof.yaml  oesw.yaml  oevw.yaml  wg-gesucht.yaml.example  willhaben.yaml.example
src/wohnung/: __init__.py  apartment_search.py  change_detector.py  cli.py  config.py  main.py  marker_detector.py  models.py  site_config.py  site_storage.py
src/wohnung/email/: __init__.py
src/wohnung/scrapers/: __init__.py  arwag.py  athome.py  base.py  bwsg.py  ebg.py  egw.py  example.py  familienwohnbau.py  frieden.py  migra.py  mischek.py  nhg.py  nordwestbahnhof.py  oesw.py  oevw.py  sozialbau.py  wohnberatung_wien.py
src/wohnung/storage/: __init__.py
tests/: conftest.py  test_apartment_search.py  test_change_detector.py  test_email_enhanced.py  test_marker_detector.py  test_marker_storage.py  test_models.py  test_oevw_scraper.py  test_scrapers.py  test_site_config.py  test_site_storage.py  test_storage.py
